# ox-content

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  actrun.toml  clippy.toml  deny.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
benchmarks/native-competitors/: Cargo.toml
benchmarks/native-competitors/src/: bench.rs  json.rs  main.rs
crates/ox_content_component_resolver/: Cargo.toml  README.md
crates/ox_content_component_resolver/src/: lib.rs  tests.rs
crates/ox_content_component_resolver/src/snapshots/: ox_content_component_resolver__tests__resolved_prop_round_trips_through_serde.snap
crates/ox_content_docs/: Cargo.toml
crates/ox_content_docs/benches/: extractor.rs  markdown.rs
crates/ox_content_docs/src/: config.rs  data.rs  extractor.rs  generator.rs  graph.rs  lib.rs  markdown.rs  model.rs  nav.rs  normalize.rs  output.rs  string_builder.rs
crates/ox_content_docs/src/data/: serialize.rs  summary.rs  tests.rs
crates/ox_content_docs/src/extractor/: context.rs  declarations.rs  driver.rs  items.rs  jsdoc.rs  jsdoc_tags.rs  members.rs  model.rs  params.rs  returns.rs  signatures.rs  tags.rs  tests.rs  type_parameters.rs  types.rs  visit.rs
crates/ox_content_docs/src/graph/: build.rs  builder.rs  builder_exports.rs  docs.rs  entrypoint_docs.rs  error.rs  export_sources.rs  exports.rs  model.rs  options.rs  resolver.rs  tests.rs  util.rs
crates/ox_content_docs/src/markdown/: category_pages.rs  entries.rs  examples.rs  file_pages.rs  group_order.rs  implementation.rs  labels.rs  links.rs  markdown_html.rs  markdown_pure.rs  options.rs  owners.rs  paths.rs  regex_cache.rs  sort.rs  stats.rs  summary.rs  symbol_map.rs  tags.rs  tests.rs  type_links.rs  typedoc.rs  typedoc_index.rs  typedoc_pages.rs  typedoc_sections.rs
crates/ox_content_docs/src/nav/: paths.rs  tests.rs  typedoc.rs
crates/ox_content_docs/src/normalize/: entry.rs  item.rs  kind.rs  member.rs  merge.rs  metadata.rs  model.rs  tags.rs  tests.rs
crates/ox_content_docs/src/snapshots/: ox_content_docs__output__tests__typedoc_docs_data.snap  ox_content_docs__output__tests__typedoc_docs_manifest.snap  ox_content_docs__output__tests__typedoc_docs_nav.snap
crates/ox_content_i18n_cli/: Cargo.toml
crates/ox_content_incremental/: Cargo.toml
crates/ox_content_incremental/benches/: incremental.rs
crates/ox_content_incremental/src/: boundary.rs  lib.rs  parser.rs  provisional.rs  renderer.rs  result.rs
crates/ox_content_incremental/tests/: incremental.rs
crates/ox_content_link_checker/: Cargo.toml  README.md
crates/ox_content_link_checker/src/: anchors.rs  lib.rs  line_index.rs  main.rs  target.rs  tests.rs  types.rs  walker.rs
crates/ox_content_link_checker/src/snapshots/: ox_content_link_checker__tests__cross_file_anchor_emits_warning_until_followup_lands.snap  ox_content_link_checker__tests__ignore_patterns_suppress_diagnostics.snap  ox_content_link_checker__tests__image_target_is_resolved_like_links.snap  ox_content_link_checker__tests__missing_relative_file_is_reported_with_resolved_path.snap
crates/ox_content_markdown_lint/: Cargo.toml
crates/ox_content_markdown_lint/src/: lib.rs  lint.rs
crates/ox_content_markdown_lint/src/lint/: diagnostics.rs  dictionary.rs  latin.rs  options.rs  state.rs
crates/ox_content_mdast/: Cargo.toml
crates/ox_content_mdast/src/: lib.rs  mdast.rs  mdast_raw.rs  transfer.rs
crates/ox_content_mdast/src/mdast/: escape.rs  tests.rs
crates/ox_content_mdast/src/mdast_raw/: blocks.rs  format.rs  inlines.rs  serializer.rs  tests.rs
crates/ox_content_mdc_checker/: Cargo.toml  README.md
crates/ox_content_mdc_checker/src/: lib.rs  main.rs  registry.rs  tests.rs
crates/ox_content_mdc_checker/src/registry/: tests.rs
crates/ox_content_napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/ox_content_napi/benches/: mdast_transfer.rs
crates/ox_content_napi/src/: collection_bindings.rs  docs_bindings.rs  docs_graph_types.rs  docs_markdown_types.rs  docs_source_types.rs  features.rs  framework_codegen.rs  highlight.rs  i18n_bindings.rs  incremental.rs  incremental_result.rs  incremental_types.rs  lib.rs  lint.rs  mdast.rs  mdast_raw.rs  media_embeds.rs  mermaid_bindings.rs  og_image_bindings.rs  parse_bindings.rs  pm.rs  sanitize.rs  search_bindings.rs  ssg_bindings.rs  ssg_page_types.rs  ssg_theme_types.rs  tabs.rs  tests.rs  transfer.rs  transform_bindings.rs  transformer.rs  youtube.rs
crates/ox_content_napi/src/collection_bindings/: entry_metadata.rs  path_match.rs
crates/ox_content_og_image/: Cargo.toml
crates/ox_content_og_image/src/: generator.rs
crates/ox_content_parser/: Cargo.toml
crates/ox_content_parser/benches/: corpus.rs  parser.rs
crates/ox_content_parser/src/: error.rs  lexer.rs  lib.rs  parser.rs
crates/ox_content_parser/tests/: edge_cases.rs  snapshot_parse.rs
crates/ox_content_profile_cli/: Cargo.toml
crates/ox_content_profile_cli/src/: args.rs  bridge.rs  docs.rs  main.rs  markdown.rs  output.rs
crates/ox_content_profiler/: Cargo.toml
crates/ox_content_profiler/src/: alloc.rs  lib.rs  report.rs  scope.rs
crates/ox_content_renderer/: Cargo.toml
crates/ox_content_renderer/examples/: render_stdin.rs
crates/ox_content_renderer/src/: frameworks.rs  html.rs  lib.rs
crates/ox_content_renderer/tests/: edge_blocks.rs  edge_cases.rs  edge_footnotes.rs  edge_links.rs  edge_sanitize.rs  snapshot_blocks.rs  snapshot_inline_links.rs  snapshot_kitchen.rs  snapshot_render.rs  snapshot_safety_urls.rs  snapshot_tables_html.rs  spec_commonmark.rs  spec_gfm.rs  stress_mutations.rs
crates/ox_content_transform/: Cargo.toml
crates/ox_content_transform/src/: features.rs  html_scan.rs  lib.rs  media_embeds.rs  options.rs  sanitize.rs  tabs.rs  transformer.rs
crates/ox_content_vite/: Cargo.toml
crates/ox_content_vite/src/: transform.rs
crates/ox_jsdoc_binary/: Cargo.toml
crates/ox_jsdoc_binary/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: parse.rs  parse_gfm.rs  parse_render.rs  render_sanitize.rs
(+1210 files in other folders)
