[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "2.81.0"
authors = ["ubugeeei"]
categories = ["development-tools"]
edition = "2021"
homepage = "https://github.com/ubugeeei-prod/ox-content"
keywords = ["markdown", "documentation", "parser", "vite"]
license = "MIT"
repository = "https://github.com/ubugeeei-prod/ox-content"
rust-version = "1.83.0"

[workspace.lints.rust]
unsafe_code = "warn"
absolute_paths_not_starting_with_crate = "warn"
non_local_definitions = "warn"
redundant_lifetimes = "warn"
unit_bindings = "warn"
unnameable_types = "warn"

[workspace.lints.clippy]
# Lint groups with lower priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restrictions
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
format_push_string = "deny"
format_collect = "deny"
format_in_format_args = "deny"
to_string_in_format_args = "deny"
unused_format_specs = "deny"
useless_format = "deny"
write_with_newline = "deny"
writeln_empty_string = "deny"
disallowed_macros = "allow"
disallowed_methods = "allow"
disallowed_types = "allow"

# Allow
match_same_arms = "allow"
option_if_let_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
single_option_map = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow"
struct_excessive_bools = "allow"
unnecessary_wraps = "allow"
wildcard_imports = "allow"
if_not_else = "allow"
unnested_or_patterns = "allow"
derive_partial_eq_without_eq = "allow"
elidable_lifetime_names = "allow"
range_plus_one = "allow"
use_self = "allow"

[workspace.dependencies]
# Internal crates (version is used for crates.io publish, path for local dev)
ox_content_allocator = { version = "2.81.0", path = "crates/ox_content_allocator" }
ox_content_ast = { version = "2.81.0", path = "crates/ox_content_ast" }
ox_content_parser = { version = "2.81.0", path = "crates/ox_content_parser" }
ox_content_renderer = { version = "2.81.0", path = "crates/ox_content_renderer" }
ox_content_incremental = { version = "2.81.0", path = "crates/ox_content_incremental" }
ox_content_mdast = { version = "2.81.0", path = "crates/ox_content_mdast" }
ox_content_napi = { version = "2.81.0", path = "crates/ox_content_napi" }
ox_content_vite = { version = "2.81.0", path = "crates/ox_content_vite" }
ox_content_og_image = { version = "2.81.0", path = "crates/ox_content_og_image" }
ox_content_docs = { version = "2.81.0", path = "crates/ox_content_docs" }
ox_content_search = { version = "2.81.0", path = "crates/ox_content_search" }
ox_content_ssg = { version = "2.81.0", path = "crates/ox_content_ssg" }
ox_content_transform = { version = "2.81.0", path = "crates/ox_content_transform" }
ox_content_i18n = { version = "2.81.0", path = "crates/ox_content_i18n" }
ox_content_i18n_checker = { version = "2.81.0", path = "crates/ox_content_i18n_checker" }
ox_content_markdown_lint = { version = "2.81.0", path = "crates/ox_content_markdown_lint" }
ox_content_mdc_checker = { version = "2.81.0", path = "crates/ox_content_mdc_checker" }
ox_content_mermaid = { version = "2.81.0", path = "crates/ox_content_mermaid" }
ox_content_link_checker = { version = "2.81.0", path = "crates/ox_content_link_checker" }
ox_content_component_resolver = { version = "2.81.0", path = "crates/ox_content_component_resolver" }
ox_content_profiler = { version = "2.81.0", path = "crates/ox_content_profiler" }
ox_jsdoc = "0.0.16"

# Memory allocation
bumpalo = "3.16"
compact_str = "0.9.1"
smallvec = "1.15"

# NAPI bindings
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
napi-build = "2.3.1"

# Parsing utilities
logos = "0.16"
regex = "1.11"
unicode-normalization = "0.1"
memchr = "2.7"

# Hashing
rustc-hash = "2"
phf = { version = "0.13", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"

# LSP
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# OXC parser
oxc_allocator = "0.132"
oxc_parser = "0.132"
oxc_ast = "0.132"
oxc_ast_visit = "0.132"
oxc_span = "0.132"
oxc_resolver = "4.2.0"

# Testing
criterion = "0.8"
insta = "1"

[profile.dev]
debug = 2

[profile.dev.package]
# Snapshot testing spends most of its time in diff/render helpers rather than
# ox-content itself. Optimizing only these dev dependencies keeps normal debug
# builds fast while making `cargo test` output comparison cheaper.
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
# Published binaries and CI benchmarks use this profile. It intentionally
# favors runtime throughput over compile time: fat LTO plus a single codegen
# unit gives LLVM whole-workspace visibility, while stripping and aborting
# panics remove unwinding/symbol-table overhead from shipped artifacts.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
panic = "abort"

[profile.release.build-override]
# Build scripts are tiny but run during release packaging and NAPI builds; keep
# their codegen deterministic with the same single-unit optimization policy.
opt-level = 3
codegen-units = 1

[profile.bench]
# Benchmarks should measure the production hot paths, not a lighter
# benchmark-only profile. Keep this aligned with `profile.release` except for
# fields Cargo ignores for benchmark harnesses.
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
