[package]
name = "ox-content-native-competitors"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"
description = "Native Rust competitor rows (pulldown-cmark, Grok Build's markdown stack) for the JS parse/render benchmark harness."

# Standalone on purpose: this benchmark runner must not join the root cargo
# workspace, so its competitor dependencies never leak into the workspace
# build graph or lockfile. Its own Cargo.lock is committed instead.
[workspace]

[dependencies]
# `html` is all `pulldown_cmark::html::push_html` needs; the default feature
# set additionally pulls `getopts` for the pulldown-cmark CLI binary, which
# this runner does not use.
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
# Grok Build's markdown stack (Apache-2.0, not published on crates.io): a lean
# wrapper whose only dependency is pulldown-cmark. Pinned by rev so competitor
# numbers stay reproducible.
xai-grok-markdown-core = { git = "https://github.com/xai-org/grok-build", rev = "98c3b2438aa922fbbe6178a5c0a4c48f85edc8ce" }

[dev-dependencies]
# Test-only: proves the hand-rolled JSON output parses and has the row shape
# the JS harness consumes.
serde_json = "1"

# Mirror the root workspace release profile so competitor rows are produced
# under the same optimization policy as the @ox-content/napi build.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
