[package]
name = "ox_content_docs"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Source code documentation generator for Ox Content (like cargo docs)"

[lints]
workspace = true

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
ox_content_parser = { workspace = true }
ox_content_renderer = { workspace = true }
ox_jsdoc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
phf = { workspace = true }

# OXC for JS/TS parsing
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_span = { workspace = true }
oxc_resolver = { workspace = true }

ox_content_profiler = { workspace = true, optional = true }

[features]
default = []
# Compiles in lightweight RAII span guards at the docs generator's hot-path
# boundaries (OXC parse, JSDoc parse, AST visit, export-graph resolution,
# normalize, Markdown render, nav/JSON emit). Off by default: when disabled,
# `profile_span!` expands to nothing and call sites pay zero overhead. Enable
# via `cargo check -p ox_content_docs --features profile` or through the
# `ox_content_profile_cli` binary's `docs-*` subcommands.
profile = ["dep:ox_content_profiler"]

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "extractor"
harness = false

[[bench]]
name = "markdown"
harness = false
