[package]
name = "ox_content_incremental"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Incremental Markdown parsing and rendering for Ox Content"

[lints]
workspace = true

[dependencies]
compact_str = { workspace = true }
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
ox_content_parser = { workspace = true }
ox_content_renderer = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "incremental"
harness = false
