[package]
name = "ox_content_markdown_lint"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Markdown lint rules for Ox Content"

[lints]
workspace = true

[dependencies]
compact_str = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-normalization = { workspace = true }
