[package]
name = "ox_content_mdast"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MDAST serializers and transfer buffers for Ox Content"

[lints]
workspace = true

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }

[dev-dependencies]
ox_content_parser = { workspace = true }
serde_json = { workspace = true }
