[package]
name = "ox_content_napi"
version.workspace = true
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for Ox Content"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_mdast = { workspace = true }
ox_content_parser = { workspace = true }
ox_content_renderer = { workspace = true }
ox_content_incremental = { workspace = true }
ox_content_markdown_lint = { workspace = true }
ox_content_mermaid = { workspace = true }
ox_content_docs = { workspace = true }
ox_content_og_image = { workspace = true }
ox_content_search = { workspace = true }
ox_content_ssg = { workspace = true }
ox_content_transform = { workspace = true }
ox_content_i18n = { workspace = true }
ox_content_i18n_checker = { workspace = true }
memchr = { workspace = true }
oxc_span = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "mdast_transfer"
harness = false
