[package]
name = "ox_content_parser"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance Markdown parser for Ox Content"

[lints]
workspace = true

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
compact_str = { workspace = true }
ox_content_profiler = { workspace = true, optional = true }

[features]
default = []
# Compiles in lightweight RAII span guards at the parser's hot block-level
# entry points. Off by default: when disabled, `profile_span!` expands to
# a zero-sized binding the optimizer drops. Enable via
# `cargo check -p ox_content_parser --features profile` or the
# `ox_content_profile_cli` binary.
profile = ["dep:ox_content_profiler"]

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
ox_content_renderer = { workspace = true }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "corpus"
harness = false
