[package]
name = "ox_content_renderer"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Markdown renderer for Ox Content"

[lints]
workspace = true

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
thiserror = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
ox_content_profiler = { workspace = true, optional = true }

[features]
default = []
# See `ox_content_parser`'s `profile` feature — same trade-off, but
# instruments the HTML renderer's visitor entry points instead.
profile = ["dep:ox_content_profiler"]

[dev-dependencies]
ox_content_parser = { workspace = true }
insta = { workspace = true }
